k8s/api-nginx-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: api-nginx-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api-nginx
  ports:
    - port: 80
      targetPort: 80
